bug 233361 : characters outside the repertoire of the current character encoding are lost if 'send in UTF-8' is selected.  (r=mscott, sr=bienvenu)